--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server --config webpack.config.js --host 0.0.0.0 --port 3031",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "rm -rf ./lib && tsc",
-    "path": "npm version path && npm run tsc && npm publish",
+    "patch": "npm version path && npm run tsc && npm publish",
     "minor": "npm version minor && npm run tsc && npm publish",
     "major": "npm version minor && npm run tsc && npm publish"
   },
