--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "react-table-editor",
+  "name": "@karakuri-web/react-table-editor",
   "version": "1.0.10",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.config.js --host 0.0.0.0 --port 3031",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --config webpack.config.js --host 0.0.0.0 --port 3031",
+    "test": "echo \"Warning: no test specified\"",
+    "lint": "echo \"Warning: no test specified\"",
     "clean": "rm -rf ./lib",
-    "tsc": "npm run clean && tsc",
+    "dev": "tsc -w",
+    "build": "npm run clean && tsc",
+    "postinstall": "yarn build || true",
     "patch": "npm run tsc && npm version patch && npm publish && npm run clean",
     "minor": "npm run tsc && npm version minor && npm publish && npm run clean",
     "major": "npm run tsc && npm version minor && npm publish && npm run clean"
@@ -17,19 +20,23 @@
   "author": "steelydylan",
   "license": "MIT",
   "dependencies": {
-    "clsx": "^1.1.0",
-    "immer": "^6.0.5",
-    "shallow-equal": "^1.2.1"
+    "clsx": "1.1.0",
+    "immer": "5.3.6",
+    "papaparse": "5.3.0",
+    "react-tooltip": "4.2.6",
+    "shallow-equal": "1.2.1",
+    "xss": "1.0.8"
   },
   "devDependencies": {
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "ts-loader": "^7.0.4",
-    "typescript": "^3.9.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "@types/papaparse": "5.2.4",
+    "@types/react": "16.9.19",
+    "@types/react-dom": "16.9.5",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "ts-loader": "7.0.5",
+    "typescript": "4.1.3",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.11.0"
   }
 }
