--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,19 @@
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
     "outDir": "./lib",
     "sourceMap": true,
     "declaration": true,
     "strict": false,
     "jsx": "react",
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "lib": ["es2018", "dom"],
+    "declarationDir": "./lib",
     "types": ["react"]
   },
-  "exclude": ["node_modules"]
+  "include": ["src"],
+  "exclude": ["node_modules", "lib"],
+  "compileOnSave": true
 }
