--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@karakuri-web/react-table-editor",
+  "name": "react-table-editor",
   "version": "1.0.10",
   "description": "",
   "main": "./lib/index.js",
