--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js --host 0.0.0.0 --port 3031",
+    "dev": "vite --port 3004",
+    "update": "npx msw init public --no-save",
     "test": "echo \"Warning: no test specified\"",
     "lint": "echo \"Warning: no test specified\"",
-    "dev": "tsc -w",
-    "build": "npm run clean && tsc",
+    "build": "npm run clean && tsc && vite build",
     "patch": "npm run tsc && npm version patch && npm publish && npm run clean",
     "minor": "npm run tsc && npm version minor && npm publish && npm run clean",
     "major": "npm run tsc && npm version minor && npm publish && npm run clean"
@@ -18,19 +18,21 @@
   "author": "steelydylan",
   "license": "MIT",
   "dependencies": {
+    "@vitejs/plugin-react": "^1.1.4",
     "clsx": "1.1.0",
     "immer": "5.3.6",
     "papaparse": "5.3.0",
     "react-tooltip": "4.2.6",
     "shallow-equal": "1.2.1",
+    "vite": "^2.7.10",
     "xss": "1.0.8"
   },
   "devDependencies": {
     "@types/papaparse": "5.2.4",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "ts-loader": "7.0.5",
     "typescript": "4.1.3",
     "webpack": "4.43.0",
